[package]
name = "readouter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "readouter"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
aws-sdk-bedrockruntime = "1"
aws-sdk-polly = "1"
aws-config = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
